fix: some style bugs on mobile (#504)

--- a/src/pages/NftCollectionInfo/styles.module.scss
+++ b/src/pages/NftCollectionInfo/styles.module.scss
@@ -76,7 +76,7 @@
       }
 
       @media (width <= $mobileBreakPoint) {
-        border-width: 2px;
+        border-bottom-width: 2px;
         font-size: 1.125rem;
       }
     }
