--- a/src/pages/ScriptList/styles.module.scss
+++ b/src/pages/ScriptList/styles.module.scss
@@ -41,6 +41,8 @@ dt {
 
     @media (max-width: $mobileBreakPoint) {
       margin-bottom: 10px;
+      flex-direction: column;
+      align-items: flex-start;
     }
 
     > span {
